<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultActivity">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textColor="@color/purple_4"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingVertical="20dp"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_heading"
        android:padding="12dp"
        android:layout_margin="24dp"
        android:backgroundTint="@color/neutral_2"
        android:background="@drawable/rounded_card"
        android:gravity="center"
        android:textColor="@color/neutral_5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="11sp"
            android:text="@string/penipuan" />

        <TextView
            android:id="@+id/tv_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="50%"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_card"
        android:backgroundTint="@color/neutral_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading" />

    <TextView
        android:id="@+id/tv_subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:textStyle="bold"
        android:textColor="@color/neutral_5"
        android:layout_marginVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/iv_preview"
        android:text="@string/transkrip"/>

    <TextView
        android:id="@+id/tv_transcript"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="28dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/neutral_5"
        app:layout_constraintTop_toBottomOf="@id/tv_subheading"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_button"
        tools:text="Lorem ipsum dolor sit amet"/>

    <LinearLayout
        android:id="@+id/linear_layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/neutral_1"
            android:layout_marginEnd="12dp"
            android:text="@string/kembali"
            android:textColor="@color/purple_2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_2"
            android:text="@string/bagikan"
            android:textColor="@color/neutral_1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>